Fixed UI flicker of fileupload due to progressive enhancement of markup.

--- a/primefaces/trunk/src/main/resources/META-INF/resources/primefaces/fileupload/fileupload.css
+++ b/primefaces/trunk/src/main/resources/META-INF/resources/primefaces/fileupload/fileupload.css
@@ -10,6 +10,10 @@
  * http://creativecommons.org/licenses/MIT/
  */
 
+ .ui-fileupload {
+     visibility: hidden;
+ }
+
 .fileupload-buttonbar .ui-button input {
   position: absolute;
   top: 0;
